--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "tmp": "~0.0.23"
   },
   "optionalDependencies": {
-    "phantomjs": "~1.9.7-1"
+    "phantomjs2": "~2.0.0"
   },
   "devDependencies": {
     "mocha": "*",
